--- a/src/templates/egresos.html
+++ b/src/templates/egresos.html
@@ -81,8 +81,13 @@
                                     </div>
                                 </label>
                             </div>
+                            <div class="col">
+                                <div class="btn-container text-center">
+                                    <button type="submit" class="btn-guardar" data-bs-toggle="modal" data-bs-target="#confirmarGuardarEgresos">Guardar</button>
+                                </div>
+                            </div>
+
                             <div class="btn-container">
-                                <button type="submit" class="btn-guardar" data-bs-toggle="modal" data-bs-target="#confirmarGuardarEgresos">Guardar</button>
                                 <!-- Modal de confirmación para guardar un alumno -->
                                 <div class="modal fade" id="confirmarGuardarEgresos" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                                     <div class="modal-dialog">
